# bazel-python

./: .gitignore  BUILD  BUILD.bazel  MODULE.bazel  pyproject.toml  requirements.in  requirements.txt
bp/: cli.py
pythontest/: BUILD  BUILD.bazel  hello.py  pyproject.toml  requirements.txt
pythontest/bp/: __init__.py
