module(
    name = "example_bazel_python",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.6.1")

# Promises some useful improvements
# https://docs.aspect.build/rulesets/aspect_rules_py#differences
bazel_dep(name = "aspect_rules_py", version = "0.8.0")

bazel_dep(name = "rules_python", version = "0.35.0", dev_dependency = True)

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.11",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    name = "pypi",
    requirements_lock = "//:requirements.txt",
)
use_repo(pip, "pypi")

