[tool.poetry]
name = "bp"
version = "0.1.0"
description = "Test"
authors = ["Your Name <you@example.com>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.scripts]
bp = "bp.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.6.5"
pyright = "^1.1.380"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
